--- a/ApplicationLogging.Adapters.MicrosoftLoggingExtensions/ApplicationLogging.Adapters.MicrosoftLoggingExtensions.csproj
+++ b/ApplicationLogging.Adapters.MicrosoftLoggingExtensions/ApplicationLogging.Adapters.MicrosoftLoggingExtensions.csproj
@@ -9,20 +9,14 @@
     <Description>An ApplicationLogging logger which provides an adapter to write logs to a Microsoft.Extensions.Logging ILogger instance (e.g. for integration into ASP.NET projects).</Description>
     <Copyright>Copyright © Alastair Wyse 2023</Copyright>
     <PackageProjectUrl>https://github.com/alastairwyse/ApplicationLogging.Adapters.MicrosoftLoggingExtensions/</PackageProjectUrl>
-    <PackageReadmeFile>README.md</PackageReadmeFile>
+    <PackageReadmeFile></PackageReadmeFile>
     <RepositoryUrl>https://github.com/alastairwyse/ApplicationLogging.Adapters.MicrosoftLoggingExtensions/</RepositoryUrl>
     <RepositoryType>git</RepositoryType>
     <PackageTags>log logging client application abstraction simple microsoft extensions ilogger</PackageTags>
     <PackageReleaseNotes>First release.</PackageReleaseNotes>
     <PackageLicenseExpression>Apache-2.0</PackageLicenseExpression>
+    <Version>1.0.1</Version>
   </PropertyGroup>
-
-  <ItemGroup>
-    <None Include="..\..\ApplicationMetrics.MetricLoggers.SqlServer\README.md">
-      <Pack>True</Pack>
-      <PackagePath>\</PackagePath>
-    </None>
-  </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="ApplicationLogging" Version="2.0.0" />
